Created local settings and updated nginx/gunicorn config.
Sensitive information was moved out of the settings file and into an included
local settings which won't be checked in.  This commit also includes adjustments
to the nginx and gunicorn configurations.

--- a/config/gunicorn_aivs.conf
+++ b/config/gunicorn_aivs.conf
@@ -9,6 +9,8 @@ env AIVS_HOME=/home/aivs/AIVScan
 env DJANGO_SETTINGS_MODDULE=aivs.settings
 env PYTHONPATH=/home/aivs/AIVScan/www
 
+chdir /home/aivs/AIVScan/www
 script
-	exec $AIVS_HOME/config/run_gunicorn_aivs.sh
+	exec django-admin.py run_gunicorn -u aivs -g aivs --pythonpath $PYTHONPATH --preload -w 2 --log-level debug --log-file $AIVSHOME/aivs.log -p $DFHOME/aivs.pid -b 127.0.0.1:8000 --settings aivs.settings
+#sudo -u aivs $AIVS_HOME/config/run_gunicorn_aivs.sh
 end script
