--- a/config/nginx_aivs.conf
+++ b/config/nginx_aivs.conf
@@ -1,14 +1,22 @@
 server {
-       listen 80;
+       listen 80 default;
        server_name 192.168.1.111;
-#       server_name 69.139.19.170;
 
+       access_log /var/log/nginx/aivs.access.log;
+       error_log /var/log/nginx/aivs.error.log;
 
        # no worries here: / gets passed to upstream
        root /home/aivs/AIVScan/www;
 
        # serve static media files directly
        # this is set up to use versioned media assets
+       location /static/ {
+       		if ($query_string) {
+		   expires max;
+		   }
+		root /home/aivs/AIVScan/www/static;
+       }
+
        location /media/ {
        		if ($query_string) {
 		   expires max;
