Mostly working upstart job for gunicorn

--- a/config/nginx_aivs.conf
+++ b/config/nginx_aivs.conf
@@ -1,32 +1,38 @@
 server {
        listen 80 default;
+       # listen 443 default;
        server_name 192.168.1.111;
 
        access_log /var/log/nginx/aivs.access.log;
        error_log /var/log/nginx/aivs.error.log;
 
-       # no worries here: / gets passed to upstream
-       root /home/aivs/AIVScan/www;
+       # todo
+       # ssl_certificate /path/to/cert.crt;
+       # ssl_certificate_key /path/to/cert.key;
 
-       # serve static media files directly
-       # this is set up to use versioned media assets
+       root /home/aivs/AIVScan/www/media/sitedown;
+
+       # set this up to use versioned static files
        location /static/ {
        		if ($query_string) {
 		   expires max;
-		   }
-		root /home/aivs/AIVScan/www/static;
+		}
+		alias /home/aivs/AIVScan/www/static/;
        }
 
+       # set this up to use versioned media files
        location /media/ {
        		if ($query_string) {
 		   expires max;
 		}
+		alias /home/aivs/AIVScan/www/media/;
 	}
 
+	# TODO: I don't think we need this because of collectstatic
 	# also serve Django admin media files directly
-	location /admin/media/ {
-		 root /home/aivs/.virtualenv/aivs/lib/python2.6/site-packages/django/contrib;
-		 }
+	# location /admin/media/ {
+	#	 root /home/aivs/.virtualenv/aivs/lib/python2.6/site-packages/django/contrib;
+	#	 }
 
 	# have nginx act as a reverse proxy for gunicorn
 	location / {
@@ -38,7 +44,10 @@ server {
 		 proxy_connect_timeout 10;
 		 proxy_read_timeout 10;
 		 proxy_pass http://localhost:8000/;
+		 client_max_body_size 1m;
 		 }
-	# if upstream isn't available, server this:
-	error_page 500 502 503 504 /media/50x.html;
+
+	# if upstream isn't available, serve this:
+	error_page 500 502 503 504 /media/sitedown/50x.html;
+	error_page 400 /media/sitedown/404.html;
 }
