--- a/config/gunicorn_aivs.conf
+++ b/config/gunicorn_aivs.conf
@@ -1,16 +1,21 @@
-description "Upstart job for Django and gunicorn"
+description "AIVScan Django upstart job"
 
 start on runlevel [2345]
 stop on runlevel [06]
-kill timeout 5
 respawn
+respawn limit 10 5
 
-env AIVS_HOME=/home/aivs/AIVScan
-env DJANGO_SETTINGS_MODDULE=aivs.settings
-env PYTHONPATH=/home/aivs/AIVScan/www
+#env AIVS_HOME=/home/aivs/AIVScan/www
+#env DJANGO_SETTINGS_MODULE=aivs.settings
+#env PYTHONPATH=/home/aivs/AIVScan/www
+#env AIVS_VIRTUALENV=/home/aivs/.virtualenv/aivs
 
-chdir /home/aivs/AIVScan/www
-script
-	exec django-admin.py run_gunicorn -u aivs -g aivs --pythonpath $PYTHONPATH --preload -w 2 --log-level debug --log-file $AIVSHOME/aivs.log -p $DFHOME/aivs.pid -b 127.0.0.1:8000 --settings aivs.settings
-#sudo -u aivs $AIVS_HOME/config/run_gunicorn_aivs.sh
-end script
+exec /home/aivs/AIVScan/config/run_aivs.sh
+
+#script
+#    cd $AIVS_HOME
+#    source $AIVS_VIRTUALENV/bin/activate
+#    sudo -u aivs $AIVS_VIRTUALENV/bin/django-admin.py run_gunicorn -u aivs -g aivs --pythonpath $PYTHONPATH --preload -w 2 --log-level debug --log-file /home/aivs/var/aivs.log -b 127.0.0.1:8000 --settings aivs.settings &
+
+#    sudo /home/aivs/.virtualenv/aivs/bin/gunicorn_django --pythonpath /home/aivs/AIVScan/www --user=aivs --group=aivs -w 3 --log-level=debug --log-file=/home/aivs/var/aivs.log --settings aivs.settings 2>>/home/aivs/var/aivs.log
+#end script
