Added SSL and temporary web authentication.

--- a/config/nginx_aivs.conf
+++ b/config/nginx_aivs.conf
@@ -1,14 +1,13 @@
 server {
-       listen 80 default;
-       # listen 443 default;
+       listen 443 default ssl;
        server_name 192.168.1.111;
 
        access_log /var/log/nginx/aivs.access.log;
        error_log /var/log/nginx/aivs.error.log;
 
-       # todo
-       # ssl_certificate /path/to/cert.crt;
-       # ssl_certificate_key /path/to/cert.key;
+       # This is just a snakeoil cert
+       ssl_certificate /etc/ssl/certs/aivs_ssl.crt;
+       ssl_certificate_key /etc/ssl/private/aivs_ssl.key;
 
        root /home/aivs/AIVScan/www/media/sitedown;
 
@@ -36,6 +35,8 @@ server {
 
 	# have nginx act as a reverse proxy for gunicorn
 	location / {
+		 auth_basic 'PwnStars team members only';
+		 auth_basic_user_file .htpasswd;
 		 proxy_pass_header Server;
 		 proxy_set_header Host $http_host;
 		 proxy_redirect off;
