--- a/config/nginx_aivs.conf
+++ b/config/nginx_aivs.conf
@@ -1,4 +1,12 @@
 server {
+       listen 80;
+       server_name 192.168.1.111;
+       location / {
+                rewrite ^(.*) https://$host$1 permanent;
+       }
+}
+
+server {
        listen 443 default ssl;
        server_name 192.168.1.111;
 
