--- a/config/celeryd-upstart.conf
+++ b/config/celeryd-upstart.conf
@@ -4,17 +4,12 @@ description "AIVScan Celery upstart job"
 # sudo cp /home/aivs/AIVScan/config/celeryd-upstart.conf /etc/init/celeryd.conf
 # sudo ln -s /lib/init/upstart-job /etc/init.d/celeryd
 
+env AIVS_HOME=/home/aivs/.virtualenv/aivs
+
 start on runlevel [2345]
-stop on runlevel [!2345]
-kill timeout 5
+stop on runlevel [06]
+
+exec $AIVS_HOME/bin/django-admin.py celeryd -Q celery --log-level debug --log-file /home/aivs/var/celery/celery.log --pythonpath /home/aivs/AIVScan/www --settings aivs.settings
+
 respawn
-
-env AIVSHOME=/home/aivs/AIVScan/www
-env DJANGO_SETTINGS_MODULE=aivs.settings
-env PYTHONPATH=/home/aivs/AIVScan/www
-
-chdir AIVSHOME
-script
-        exec . /home/aivs/.virtualenv/aivs/bin/activate
-        exec django-admin.py celeryd -Q celery --pythonpath /home/aivs/AIVScan/www --settings aivs.settings
-end script
+respawn limit 10 5
