--- a/config/gunicorn_aivs.conf
+++ b/config/gunicorn_aivs.conf
@@ -4,13 +4,13 @@ description "AIVScan Django upstart job"
 # sudo cp /home/aivs/AIVScan/config/gunicorn_aivs.conf /etc/init/gunicorn_aivs.conf
 # sudo ln -s /lib/init/upstart-job /etc/init.d/gunicorn_aivs
 
+env AIVS_HOME=/home/aivs/.virtualenv/aivs
+
 start on runlevel [2345]
 stop on runlevel [06]
+
+exec $AIVS_HOME/bin/django-admin.py run_gunicorn -w 2 --log-level debug --log-file /home/aivs/var/aivs.log -b 127.0.0.1\
+:8000 --pythonpath /home/aivs/AIVScan/www --settings aivs.settings
+
 respawn
 respawn limit 10 5
-
-chdir /home/aivs/AIVScan/www/aivs
-script
-        exec . /home/aivs/.virtualenv/aivs/bin/activate
-        exec /home/aivs/.virtualenv/aivs/bin/django-admin.py run_gunicorn -w 2 --worker-class gevent --log-level debug --log-file /home/aivs/var/aivs.log -b 127.0.0.1:8000 --settings aivs.settings
-end script
