--- a/config/celeryd-upstart.conf
+++ b/config/celeryd-upstart.conf
@@ -9,7 +9,7 @@ env AIVS_HOME=/home/aivs/.virtualenv/aivs
 start on runlevel [2345]
 stop on runlevel [06]
 
-exec /home/aivs/.virtualenv/aivs/bin/python /home/aivs/.virtualenv/aivs/bin/django-admin.py celeryd -Q celery --pythonpath /home/aivs/AIVScan/www --settings aivs.settings
+exec /home/aivs/.virtualenv/aivs/bin/python /home/aivs/.virtualenv/aivs/bin/django-admin.py celeryd -Q celery -B -E -l INFO --logfile=/home/aivs/var/celeryd.log --pythonpath /home/aivs/AIVScan/www --settings aivs.settings
 
 respawn
 respawn limit 10 5
